manifests/2condeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2cons
  namespace: test-opa
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: test
        image: nginx:1.14.0
