manifests/signed_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signed-deployment
  namespace: test-opa
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: %DOCKER_REGISTRY%:5000/hello-app:1.0
        ports:
        - containerPort: 80
